set up google auth for login

--- a/index.html
+++ b/index.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>SnagStats</title>
+    <title>SnagStat</title>
 
     <link rel="stylesheet" type="text/css" href="./lib/node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./styles/main.css">
 
 </head>
-<body ng-app="SnagStats">
+<body ng-app="SnagStat">
     
     <div ng-include="'./partials/navbar.html'"></div>
     <div  ng-view></div>
     
-
 
 <!-- SCRIPT TAGS -->
  <script src="https://use.fontawesome.com/485b3ba4fb.js"></script>
@@ -30,12 +29,12 @@
  <script type="text/javascript" src="./lib/node_modules/angular-route/angular-route.min.js"></script>
  
  <!-- APP -->
- <script type="text/javascript" src="./javascripts/app.js"></script>
- <script type="text/javascript" src="./javascripts/AppConstants.js"></script>
- <script type="text/javascript" src="./javascripts/AppConfig.js"></script>
- 
+<script type="text/javascript" src="./javascripts/app.js"></script>
+<script type="text/javascript" src="./javascripts/AppConstants.js"></script>
+<script type="text/javascript" src="./javascripts/AppConfig.js"></script>
+
  <!-- SERVICES -->
- <script type="text/javascript" src="./javascripts/services/AuthServices.js"></script>
+ <script type="text/javascript" src="./javascripts/services/AuthService.js"></script>
  
  <!-- CONTROLLERS -->
  <script type="text/javascript" src="./javascripts/controllers/AuthCtrl.js"></script>
