added navbar with logout functionality, completed auth for new users

--- a/index.html
+++ b/index.html
@@ -35,8 +35,15 @@
 
  <!-- SERVICES -->
  <script type="text/javascript" src="./javascripts/services/AuthService.js"></script>
+ <script type="text/javascript" src="./javascripts/services/TeamService.js"></script>
+ <script type="text/javascript" src="./javascripts/services/TrackerService.js"></script>
  
  <!-- CONTROLLERS -->
+ <script type="text/javascript" src="./javascripts/controllers/RosterCtrl.js"></script>
+ <script type="text/javascript" src="./javascripts/controllers/TrackerCtrl.js"></script>
+ <script type="text/javascript" src="./javascripts/controllers/TeamEditCtrl.js"></script>
+ <script type="text/javascript" src="./javascripts/controllers/FindCoachCtrl.js"></script>
+ <script type="text/javascript" src="./javascripts/controllers/TeamViewCtrl.js"></script>
  <script type="text/javascript" src="./javascripts/controllers/AuthCtrl.js"></script>
  <script type="text/javascript" src="./javascripts/controllers/NavCtrl.js"></script>
  
