adding games to FB

--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
  <script type="text/javascript" src="./javascripts/services/AuthService.js"></script>
  <script type="text/javascript" src="./javascripts/services/TeamService.js"></script>
  <script type="text/javascript" src="./javascripts/services/TrackerService.js"></script>
+ <script type="text/javascript" src="./javascripts/services/GameService.js"></script>
  
  <!-- CONTROLLERS -->
+ <script type="text/javascript" src="./javascripts/controllers/GameEditCtrl.js"></script>
  <script type="text/javascript" src="./javascripts/controllers/RosterCtrl.js"></script>
  <script type="text/javascript" src="./javascripts/controllers/TrackerCtrl.js"></script>
  <script type="text/javascript" src="./javascripts/controllers/TeamEditCtrl.js"></script>
