--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
  <script type="text/javascript" src="./lib/node_modules/angular-sanitize/angular-sanitize.min.js"></script>
  <script type="text/javascript" src="./lib/node_modules/angular-animate/angular-animate.min.js"></script>
  <script type="text/javascript" src="./lib/node_modules/angular-route/angular-route.min.js"></script>
+ <script type="text/javascript" src="lib/node_modules/moment/min/moment.min.js"></script>
+ 
  
  <!-- APP -->
 <script type="text/javascript" src="./javascripts/app.js"></script>
