teamStats display on teamDashboard

--- a/index.html
+++ b/index.html
@@ -40,8 +40,12 @@
  <script type="text/javascript" src="./javascripts/services/TeamService.js"></script>
  <script type="text/javascript" src="./javascripts/services/TrackerService.js"></script>
  <script type="text/javascript" src="./javascripts/services/GameService.js"></script>
+ <script type="text/javascript" src="./javascripts/services/GameStatService.js"></script>
+ <script type="text/javascript" src="./javascripts/services/TeamStatService.js"></script>
  
  <!-- CONTROLLERS -->
+ <script type="text/javascript" src="./javascripts/controllers/TeamStatCtrl.js"></script>
+ <script type="text/javascript" src="./javascripts/controllers/GameStatCtrl.js"></script>
  <script type="text/javascript" src="./javascripts/controllers/GameEditCtrl.js"></script>
  <script type="text/javascript" src="./javascripts/controllers/RosterCtrl.js"></script>
  <script type="text/javascript" src="./javascripts/controllers/TrackerCtrl.js"></script>
