--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>SnagStat</title>
 
+    <link href="https://fonts.googleapis.com/css?family=Krona+One|Roboto" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./lib/node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./styles/main.css">
 
@@ -28,6 +29,8 @@
  <script type="text/javascript" src="./lib/node_modules/angular-animate/angular-animate.min.js"></script>
  <script type="text/javascript" src="./lib/node_modules/angular-route/angular-route.min.js"></script>
  <script type="text/javascript" src="lib/node_modules/moment/min/moment.min.js"></script>
+ <script type="text/javascript" src="/lib/node_modules/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
+ <script type="text/javascript" src="/lib/node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
  
  
  <!-- APP -->
