added game history view and functionality

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
  <script type="text/javascript" src="./javascripts/services/TeamStatService.js"></script>
  
  <!-- CONTROLLERS -->
+ <script type="text/javascript" src="./javascripts/controllers/GameHistoryCtrl.js"></script>
  <script type="text/javascript" src="./javascripts/controllers/TeamStatCtrl.js"></script>
  <script type="text/javascript" src="./javascripts/controllers/GameStatCtrl.js"></script>
  <script type="text/javascript" src="./javascripts/controllers/GameEditCtrl.js"></script>
