--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
  <script type="text/javascript" src="./lib/node_modules/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
  <script type="text/javascript" src="./lib/node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
  
- 
+
  <!-- APP -->
 <script type="text/javascript" src="./javascripts/app.js"></script>
 <script type="text/javascript" src="./javascripts/AppConstants.js"></script>
@@ -46,6 +46,7 @@
  <script type="text/javascript" src="./javascripts/services/TeamStatService.js"></script>
  
  <!-- CONTROLLERS -->
+ <script type="text/javascript" src="./javascripts/controllers/StatsViewCtrl.js"></script>
  <script type="text/javascript" src="./javascripts/controllers/GameHistoryCtrl.js"></script>
  <script type="text/javascript" src="./javascripts/controllers/TeamStatCtrl.js"></script>
  <script type="text/javascript" src="./javascripts/controllers/GameStatCtrl.js"></script>
