--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>SnagStat</title>
 
     <link href="https://fonts.googleapis.com/css?family=Krona+One|Roboto" rel="stylesheet">
+    <link href="https://use.fontawesome.com/releases/v5.0.2/css/all.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./lib/node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./styles/main.css">
 
